Unnecessary check for JSRs in CDS

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: None
    • Component/s: hotspot
    • b21

      InstanceKlass::metaspace_pointers_do() checks if methods contain JSRs because they are rewritten at runtime, but this leads to an unsafe check through the bytecodes. This check, although a small optimization, isn't necessary so it can be removed to improve safety.

      Iterating through bytecodes before verification can mean malformed codes can be parsed by BytecodeStream, leading to unexpected results or hangs.

            Assignee:
            Matias Saavedra Silva
            Reporter:
            Matias Saavedra Silva
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: