8341444: Unnecessary check for JSRs in CDS